correcting contrast color

--- a/chamber/styles/chamber-base.css
+++ b/chamber/styles/chamber-base.css
@@ -54,6 +54,7 @@ header img {
     cursor: pointer;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2rem;
+    color: var(--text-light);
 }
 
 .hamburguer::before {
@@ -104,7 +105,7 @@ header img {
 
 .menu button {
     background-color: var(--highlight-colors);
-    color: var(--text-light);
+    color: var(--text-color);
     cursor: pointer;
     padding: 0.5rem 1.2rem;
     border: none;
